# Gator-Gems

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  package-lock.json
backend/: TODO  ]  generate_docs.py  justfile  openapi.json  pyproject.toml
backend/app/: main.py
backend/app/core/: locations.py
backend/app/core/security/: basic_auth.py  constants.py  jwt_auth.py
backend/app/models/: reviews.py  users.py
backend/app/routes/: health.py  reviews.py  users.py
backend/tests/mocks/: users.py
backend/tests/unit/: conftest.py
backend/tests/unit/core/: test_connections.py  test_jwt_helpers.py  test_locations.py
backend/tests/unit/core/security/: test_basic_auth.py  test_jwt_auth.py
backend/tests/unit/routes/: test_reviews.py  test_users.py  test_users_admin.py
frontend/: .gitignore  .prettierignore  eslint.config.js  justfile  package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/src/: routeTree.gen.ts  router.tsx
frontend/src/api/: CreateReviewMutation.tsx  DeleteReviewMutation.tsx  DeleteUserMutation.tsx  LoginMutation.tsx  LogoutMutation.tsx  MyReviewsQuery.tsx  ReviewsQuery.tsx  SignupMutation.tsx  UpdateReviewMutation.tsx  UserQuery.tsx  UsersQuery.tsx
frontend/src/components/: Auth.tsx  EditReviewModal.tsx  LeafletMap.tsx  ListCard.tsx  Login.tsx  LoginForm.tsx  Navbar.tsx  NotFound.tsx  ProfileCard.tsx  ReviewForm.tsx  ReviewList.tsx  Search.tsx  SignupForm.tsx
frontend/src/routes/: __root.tsx  adminPanel.tsx  gemMap.tsx  index.tsx  login.tsx  logout.tsx  newPage.tsx  profile.tsx  signup.tsx
(+24 files in other folders)
